server/server.log

> condoflow-server@1.0.0 dev
> nodemon --watch src --ext ts --exec ts-node src/index.ts

[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): src\**\*[39m
[33m[nodemon] watching extensions: ts[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
CondoFlow API rodando em http://localhost:3001
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
CondoFlow API rodando em http://localhost:3001
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
Error: listen EADDRINUSE: address already in use :::3001
    at Server.setupListenHandle [as _listen2] (node:net:2008:16)
    at listenInCluster (node:net:2065:12)
    at Server.listen (node:net:2170:7)
    at app.listen (C:\Users\Renata\CondoFlow\server\node_modules\express\lib\application.js:635:24)
    at Object.<anonymous> (C:\Users\Renata\CondoFlow\server\src\index.ts:19:5)
    at Module._compile (node:internal/modules/cjs/loader:1830:14)
    at Module.m._compile (C:\Users\Renata\CondoFlow\server\node_modules\ts-node\src\index.ts:1618:23)
    at node:internal/modules/cjs/loader:1961:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Renata\CondoFlow\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1553:32) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 3001
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
CondoFlow API rodando em http://localhost:3001
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
C:\Users\Renata\CondoFlow\server\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: â¨Ż Unable to compile TypeScript:
src/index.ts(6,8): error TS1192: Module '"C:/Users/Renata/CondoFlow/server/src/routes/projecao"' has no default export.

    at createTSError (C:\Users\Renata\CondoFlow\server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Renata\CondoFlow\server\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Renata\CondoFlow\server\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Renata\CondoFlow\server\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Renata\CondoFlow\server\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1961:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Renata\CondoFlow\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1553:32)
    at Module._load (node:internal/modules/cjs/loader:1355:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19) {
  diagnosticCodes: [ 1192 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
